--- a/index.html
+++ b/index.html
@@ -1,106 +1,132 @@
-<html>
+<!doctype html>
+<html lang="en">
 
-<script>
-  var myCharacteristic;
-  var deviceName;
-  function connect() {
-    navigator.bluetooth.requestDevice({filters: [{services: [serviceUuid]}]})
-    .then(device => {
-      log('Connecting...');
-      deviceName = device.name;
-      return device.gatt.connect();
-    })
-    .then(server => {
-      console.log('Getting Service...');
-      return server.getPrimaryService(serviceUuid);
-    })
-    .then(service => {
-      console.log('Getting Characteristic...');
-      return service.getCharacteristic(characteristicUuid);
-    })
-    .then(characteristic => {
-      myCharacteristic = characteristic;
-      return myCharacteristic.startNotifications().then(_ => {
-        console.log('> Notifications started');
-        log("Connected to: " + deviceName);
-        myCharacteristic.addEventListener('characteristicvaluechanged',
-            handleNotifications);
-      });
-    })
-    .catch(error => {
-      console.log('Argh! ' + error);
-    });
-  }
-  function disconnect() {
-    if (myCharacteristic) {
-      myCharacteristic.stopNotifications()
-      .then(_ => {
-        console.log('> Notifications stopped');
-        log("Disconnected")
-        myCharacteristic.removeEventListener('characteristicvaluechanged',
-            handleNotifications);
-      })
-      .catch(error => {
-        console.log('Argh! ' + error);
-      });
-    }
-  }
-  function handleNotifications(event) {
-    let value = event.target.value;
-    log(deviceName + "> " + new TextDecoder().decode(value));
-    console.log('> Received: ' + new TextDecoder().decode(value));
-  }
-  function send() {
-    var data = document.getElementById("input").value;
-    log("You> " + data);
-    myCharacteristic.writeValue(str2ab(data+"\n"))
-    document.getElementById("input").value = "";
-  }
-  function str2ab(str) {
-    var buf = new ArrayBuffer(str.length*2); // 2 bytes for each char
-    var bufView = new Uint16Array(buf);
-    for (var i=0, strLen=str.length; i<strLen; i++) {
-      bufView[i] = str.charCodeAt(i);
-    }
-    return buf;
-  }
-  function log(str) {
-    document.getElementById("term").value += str+"\n";
-  }
-</script>
+<!-- For the most up to date version and other running options plese see the Git repository: 
+	https://github.com/TheBubbleWorks/TheBubbleWorks_WebBluetooth_AdafruitFeather_Blink_Simple -->
 
 <head>
-  <title>Web-Bluetooth Terminal</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0"/>
+    <title>Adafruit Feather - Blink Simple</title>
 </head>
 
 <body>
-  <div class="header">WEB-BLUETOOTH TERMINAL</div>
-  <div class="terminal"><textarea id="term" readonly class="terminal"></textarea></div>
-  <div class="footer">
-    <div class="inputfield">
-      <input id ="input" type="text" class="input" placeholder="Write something to send here...">
-    </div>
-      <div class="button" style="background-color: black;">
-        <button onclick="send()">
-          <i class="fa fa-paper-plane"></i>
-        </button>
-      </div>
-      <div id="connect" class="button" style="background-color: green;" >
-        <button onclick="connect()">
-          <i class="fa fa-plug"></i>
-        </button>
-      </div>
-      <div class="button" style="background-color: red;">
-        <button onclick="disconnect()">
-          <i class="fa fa-times"></i>
-        </button>
-      </div>
-  </div>
+<div>
+    <button id="connectButton" onclick="setupBluetooth()">Connect</button>
+</div>
+<br/>
+<div>
+    <button id="onButton" onclick="ledOnPressed()">LED On</button>
+</div>
+<br/>
+<div>
+    <button id="offButton" onclick="ledOffPressed()">LED Off</button>
+</div>
+<br/>
+
+
+<script>
+    // These 128-Bit ID's correspond to the Nordic Semi-conductor 'UART' BLE service which is used by Adafruit and others.
+    var UART_SERVICE_UUID = '6e400001-b5a3-f393-e0a9-e50e24dcca9e';
+    var UART_CHAR_RX_UUID = '6e400003-b5a3-f393-e0a9-e50e24dcca9e';
+    var UART_CHAR_TX_UUID = '6e400002-b5a3-f393-e0a9-e50e24dcca9e';
+    var connected = false;
+    var gattServer = null;
+    var uartService = null;
+    var writeCharacteristic = null;
+    var readCharacteristic = null;
+    function handleError(error) {
+        log("ERROR:" + error);
+    }
+    function setupBluetooth() {
+        if (navigator.bluetooth == undefined) {
+            log('ERROR: Web Bluetooth support not found, please see: https://goo.gl/5p4zNM');
+            return;
+        }
+        if (gattServer != null && gattServer.connected) {
+            //disconnect();
+        } else {
+            log('Connecting...');
+            if (readCharacteristic == null) {
+                navigator.bluetooth.requestDevice({
+                            filters: [{
+                                services: [UART_SERVICE_UUID]
+                            }]
+                        })
+                        .then(function (device) {
+                            log('> DeviceNAme=' + device.name);
+                            log('Connecting to GATT Server...');
+                            return device.connectGATT(); // This is deprectated, but still necessary in some 'older' browser versions.
+                        }).then(function (server) {
+                    log('> Found GATT server');
+                    gattServer = server;
+                    // Get UART service
+                    return gattServer.getPrimaryService(UART_SERVICE_UUID);
+                }).then(function (service) {
+                    log('> Found event service');
+                    uartService = service;
+                    // Get write characteristic
+                    return uartService.getCharacteristic(UART_CHAR_TX_UUID);
+                }).then(function (characteristic) {
+                    log('> Found write characteristic');
+                    writeCharacteristic = characteristic;
+                    // Get read characteristic
+                    return uartService.getCharacteristic(UART_CHAR_RX_UUID);
+                }).then(function (characteristic) {
+                    connected = true;
+                    log('> Found read characteristic');
+                    readCharacteristic = characteristic;
+                    deviceReady();
+                    // Listen to device notifications
+                    return readCharacteristic.startNotifications().then(function () {
+                        readCharacteristic.addEventListener('characteristicvaluechanged', function (event) {
+                            log('> characteristicvaluechanged = ' + event.target.value + ' [' + event.target.value.byteLength + ']');
+                            if (event.target.value.byteLength > 0) {
+                                var data = new Uint8Array(event.target.value);
+                                log("Recv data: " + data);
+                            }
+                        });
+                    });
+                }).catch(handleError);
+            }
+        }
+    }
+    function send(data) {
+        log("Sending: " + data);
+        return writeCharacteristic.writeValue(new Uint8Array(data));
+    }
+    // These magic hex numbers below conform to the Firmata standard, in a real app you would use
+    // a JavaScript Firmata libraries to hide these details.
+    // An example of which will be published on www.thebubbleworks.com
+    var FIRMATA_PIN13_DIGITAL_OUT_MESSAGE = [0xf4, 0x0d, 0x01];
+    var FIRMATA_PIN13_DIGITAL_LOW_MESSAGE = [0x91, 0x00, 0x00];
+    var FIRMATA_PIN13_DIGITAL_HIGH_MESSAGE = [0x91, 0x20, 0x00];
+    function deviceReady() {
+        send(FIRMATA_PIN13_DIGITAL_OUT_MESSAGE).then( function() {
+            send(FIRMATA_PIN13_DIGITAL_LOW_MESSAGE);
+    })
+        ;
+    }
+    function ledOnPressed() {
+        send(FIRMATA_PIN13_DIGITAL_HIGH_MESSAGE);
+    }
+    function ledOffPressed() {
+        send(FIRMATA_PIN13_DIGITAL_LOW_MESSAGE);
+    }
+</script>
+
+
+<!-- In browser console output for debugging, Caveman Debugging! -->
+<h3>Debug output:</h3>
+<textarea cols="80" rows="16" id="consoleTextArea" readonly></textarea>
+<script>
+    function log(line) {
+        console.log(line);
+        previous_text = document.getElementById('consoleTextArea').innerHTML;
+        document.getElementById('consoleTextArea').innerHTML = previous_text + line + "\n";
+    }
+</script>
+
+
 </body>
 </html>
