--- a/index.html
+++ b/index.html
@@ -26,93 +26,95 @@
 
 
 <script>
-    // These 128-Bit ID's correspond to the Nordic Semi-conductor 'UART' BLE service which is used by Adafruit and others.
-    var UART_SERVICE_UUID = '6e400001-b5a3-f393-e0a9-e50e24dcca9e';
-    var UART_CHAR_RX_UUID = '6e400003-b5a3-f393-e0a9-e50e24dcca9e';
-    var UART_CHAR_TX_UUID = '6e400002-b5a3-f393-e0a9-e50e24dcca9e';
-    var connected = false;
-    var gattServer = null;
-    var uartService = null;
-    var writeCharacteristic = null;
-    var readCharacteristic = null;
-    function handleError(error) {
-        log("ERROR:" + error);
-    }
-    function setupBluetooth() {
-        if (navigator.bluetooth == undefined) {
-            log('ERROR: Web Bluetooth support not found, please see: https://goo.gl/5p4zNM');
-            return;
-        }
-        if (gattServer != null && gattServer.connected) {
-            //disconnect();
-        } else {
-            log('Connecting...');
-            if (readCharacteristic == null) {
-                navigator.bluetooth.requestDevice({
-                            filters: [{
-                                services: [UART_SERVICE_UUID]
-                            }]
-                        })
-                        .then(function (device) {
-                            log('> DeviceNAme=' + device.name);
-                            log('Connecting to GATT Server...');
-                            return device.connectGATT(); // This is deprectated, but still necessary in some 'older' browser versions.
-                        }).then(function (server) {
-                    log('> Found GATT server');
-                    gattServer = server;
-                    // Get UART service
-                    return gattServer.getPrimaryService(UART_SERVICE_UUID);
-                }).then(function (service) {
-                    log('> Found event service');
-                    uartService = service;
-                    // Get write characteristic
-                    return uartService.getCharacteristic(UART_CHAR_TX_UUID);
-                }).then(function (characteristic) {
-                    log('> Found write characteristic');
-                    writeCharacteristic = characteristic;
-                    // Get read characteristic
-                    return uartService.getCharacteristic(UART_CHAR_RX_UUID);
-                }).then(function (characteristic) {
-                    connected = true;
-                    log('> Found read characteristic');
-                    readCharacteristic = characteristic;
-                    deviceReady();
-                    // Listen to device notifications
-                    return readCharacteristic.startNotifications().then(function () {
-                        readCharacteristic.addEventListener('characteristicvaluechanged', function (event) {
-                            log('> characteristicvaluechanged = ' + event.target.value + ' [' + event.target.value.byteLength + ']');
-                            if (event.target.value.byteLength > 0) {
-                                var data = new Uint8Array(event.target.value);
-                                log("Recv data: " + data);
-                            }
-                        });
-                    });
-                }).catch(handleError);
-            }
-        }
-    }
-    function send(data) {
-        log("Sending: " + data);
-        return writeCharacteristic.writeValue(new Uint8Array(data));
-    }
-    // These magic hex numbers below conform to the Firmata standard, in a real app you would use
-    // a JavaScript Firmata libraries to hide these details.
-    // An example of which will be published on www.thebubbleworks.com
-    var FIRMATA_PIN13_DIGITAL_OUT_MESSAGE = [0xf4, 0x0d, 0x01];
-    var FIRMATA_PIN13_DIGITAL_LOW_MESSAGE = [0x91, 0x00, 0x00];
-    var FIRMATA_PIN13_DIGITAL_HIGH_MESSAGE = [0x91, 0x20, 0x00];
-    function deviceReady() {
-        send(FIRMATA_PIN13_DIGITAL_OUT_MESSAGE).then( function() {
-            send(FIRMATA_PIN13_DIGITAL_LOW_MESSAGE);
+    if (!navigator.bluetooth) {
+  alert('Sorry, your browser doesn\'t support Bluetooth API');
+}
+
+const SEND_SERVICE = '6e400001-b5a3-f393-e0a9-e50e24dcca9e';   //vale const o tendría que ser var
+const SEND_SERVICE_CHARACTERISTIC = '6e400003-b5a3-f393-e0a9-e50e24dcca9e';
+
+const controlButtonsListElements = document.querySelectorAll('.control-buttons > li');
+const connectButton = document.getElementById('connectButton');
+const disconnectButton = document.getElementById('disconnectButton');
+const lightOffButton = document.getElementById('lightOff');
+const toggleRedLightButton = document.getElementById('toggleRedLight');
+const toggleBlueLightButton = document.getElementById('toggleBlueLight');
+const toggleGreenLightButton = document.getElementById('toggleGreenLight');
+const runBlinkLightButton = document.getElementById('runBlinkLight');
+
+let toggleLigthCharacteristic;
+let myDevice;
+
+connectButton.addEventListener('pointerup', connectButtonPointerUpHandler);
+
+function connectButtonPointerUpHandler() {
+  navigator.bluetooth.requestDevice({ acceptAllDevices:true })
+    .then(device => {
+      myDevice = device;
+      log('Connecting to GATT Server...');
+      return device.gatt.connect();
     })
-        ;
-    }
-    function ledOnPressed() {
-        send(FIRMATA_PIN13_DIGITAL_HIGH_MESSAGE);
-    }
-    function ledOffPressed() {
-        send(FIRMATA_PIN13_DIGITAL_LOW_MESSAGE);
-    }
+    .then(server => server.getPrimaryService(SEND_SERVICE))
+    .then(service => service.getCharacteristic(SEND_SERVICE_CHARACTERISTIC))
+    .then(characteristic => {
+      toggleLigthCharacteristic = characteristic;
+
+      toggleButtonsVisible();
+      toggleItemsEventListeners('addEventListener');
+    })
+    .catch(error => {
+      console.error(error);
+    });
+}
+
+function lightOffButtonClickHandler() {
+  return toggleLigthCharacteristic.writeValue(Uint8Array.of(0));
+}
+
+function toggleLightButtonClickHandler(event) {
+  const code = Number(event.target.dataset.code);
+
+  if (code === 1) {
+    toggleLigthCharacteristic.writeValue(Uint8Array.of(code));
+
+    return;
+  }
+
+  toggleLigthCharacteristic.readValue()
+    .then(currentCode => {
+      const convertedCode = currentCode.getUint8(0);
+
+      toggleLigthCharacteristic.writeValue(Uint8Array.of(convertedCode === code ? 0 : code));
+    });
+}
+
+function toggleButtonsVisible() {
+  Array.prototype.forEach.call(controlButtonsListElements, listElement => {
+    listElement.classList.toggle('visible');
+  });
+}
+
+function disconnectButtonClickHandler() {
+  lightOffButtonClickHandler()
+    .then( () => {
+      myDevice.gatt.disconnect();
+
+      toggleItemsEventListeners('removeEventListener');
+      toggleButtonsVisible();
+
+      toggleLigthCharacteristic = undefined;
+      myDevice = undefined;
+    });
+}
+
+function toggleItemsEventListeners(action) {
+  disconnectButton[action]('click', disconnectButtonClickHandler);
+  lightOffButton[action]('click', lightOffButtonClickHandler);
+  runBlinkLightButton[action]('click', toggleLightButtonClickHandler);
+  toggleGreenLightButton[action]('click', toggleLightButtonClickHandler);
+  toggleRedLightButton[action]('click', toggleLightButtonClickHandler);
+  toggleBlueLightButton[action]('click', toggleLightButtonClickHandler);
+}
 </script>
 
 
